library/general/disallowedtags/samples/container-image-must-not-have-latest-tag/example_no_tag_w_port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed-4
spec:
  containers:
    - name: opa
      image: openpolicyagent:443/opa
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
